--- a/config.yaml
+++ b/config.yaml
@@ -3,6 +3,7 @@
 # the provided snakemake pipeline should first fill out this file with paths to
 # their own data, as the Snakefile requires it.
 
+
 # The path to a text file specifying where to find read information for each sample
 # Each row in the sample file should represent a different sample.
 # The sample file should have 3 columns (each separated by a single tab):
@@ -22,11 +23,26 @@
 
 # which callers do you want to run to find SNPs?
 # if you don't want to run the snp pipeline, set this to a falsey value or comment out the line
-"snp_callers" : ["gatk", "varscan"]
+"snp_callers" : ["gatk-snp", "varscan-snp"]
 
 # which callers do you want to run to find indels?
 # if you don't want to run the indel pipeline, set this to a falsey value or comment out the line
-"indel_callers" : ["gatk-indel", "varscan-indel", "delly"]
+"indel_callers" : ["gatk-indel", "varscan-indel", "delly", "pindel", "manta", "strelka"]
 
 # what are the maximum number of threads to use for the entire pipeline?
 "num_threads" : 8
+
+
+# CALLER SPECIFIC PARAMETERS
+# specify any parameters that should be passed to each caller script here
+# key should be <caller_name>_params and value can be string or array of parameters
+
+# manta parameters
+# 1) path to manta config file
+# 2) path to the directory in which manta is stored or "" if manta is installed in the conda env (ex: if using --use-conda)
+"manta_params" : ["/iblm/netapp/home/amassarat/breakCA/merge_callers/scripts/configManta.py.ini", ""]
+
+# strelka parameters
+# 1) path to strelka config file
+# 2) path to the directory in which strelka is stored or "" if strelka is installed in the conda env (ex: if using --use-conda)
+"strelka_params" : ["/iblm/netapp/home/amassarat/breakCA/merge_callers/scripts/configureStrelkaGermlineWorkflow.py.ini", ""]
