--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,7 @@
 
 # which samples should we execute the pipeline on?
 # comment out this line if you want to run all samples
-"SAMP_NAMES" : ["SRR891269"]
+# "SAMP_NAMES" : ["SRR891269"]
 
 # The path to a reference genome for BWA
 "genome" : "/iblm/netapp/data1/external/GRC37/combined/bwa_index_assembly19/Homo_sapiens_assembly19.fasta"
@@ -21,7 +21,7 @@
 # defined relative to whatever directory you execute the snakemake command in
 "output_dir" : "/iblm/netapp/home/amassarat/breakCA/merge_callers/out"
 
-# which callers do you want to run to find SNPs?
+# which callers do you want to run to find SNVs?
 # if you don't want to run the snp pipeline, set this to a falsey value or comment out the line
 "snp_callers" : ["gatk-snp", "varscan-snp"]
 
