add hap.py to env.yml even though it doesn't install correctly

--- a/env.yml
+++ b/env.yml
@@ -17,3 +17,8 @@ dependencies:
   - pindel
   - coreutils>=8.31
   - strelka
+  - vardict-java
+  - bedtools
+  # this won't work until https://github.com/Illumina/hap.py/pull/82 is merged
+  # in because hap.py is incompatible with the newest version of conda:
+  - hap.py
