--- a/env.yml
+++ b/env.yml
@@ -6,12 +6,12 @@ channels:
   - nodefaults
 dependencies:
   - bwa
-  - samtools
+  - samtools=1.9=h8571acd_11
   - macs2>=2.1.2
   - gatk4>=4.1.1.0
   - varscan
   - delly
-  - bcftools
+  # - bcftools
   - vcftools
   - manta
   - pindel
@@ -19,6 +19,6 @@ dependencies:
   - strelka
   - vardict-java
   - bedtools
-  # this won't work until https://github.com/Illumina/hap.py/pull/82 is merged
-  # in because hap.py is incompatible with the newest version of conda:
+  # # this won't work until https://github.com/Illumina/hap.py/pull/82 is merged
+  # # in because hap.py is incompatible with the newest version of conda:
   - hap.py
