--- a/config.yaml
+++ b/config.yaml
@@ -34,11 +34,11 @@
 
 # which callers do you want to run to find SNVs?
 # if you don't want to run the snp pipeline, set this to a falsey value or comment out the line
-"snp_callers" : ["gatk-snp", "varscan-snp", "pg-snp"]
+"snp_callers" : ["gatk-snp", "varscan-snp", "vardict-snp", "pg-snp"]
 
 # which callers do you want to run to find indels?
 # if you don't want to run the indel pipeline, set this to a falsey value or comment out the line
-"indel_callers" : ["gatk-indel", "varscan-indel", "delly", "pindel", "illumina-manta", "illumina-strelka", "pg-indel"]
+"indel_callers" : ["gatk-indel", "varscan-indel", "vardict-indel", "delly", "pindel", "illumina-manta", "illumina-strelka", "pg-indel"]
 
 # what are the maximum number of threads to use for the entire pipeline?
 "num_threads" : 8
@@ -66,6 +66,14 @@
   }
 }
 
+"vardict-snp" : {
+  "cols": {
+    'other': ["QUAL"]
+    'info': ["TYPE","DP","VD","AF","QSTD","MQ","SN","HIAF","ADJAF","NM","SVTYPE","SVLEN","DUPRATE"],
+    'format': ["GT"]
+  }
+}
+
 "pg-snp" : {
   "cols": {'format': ["GT"]},
   # path to a bgzip, indexed VCF containing variants called in the platinum genomes project
@@ -83,6 +91,14 @@
   "cols": {
     'info': ["ADP"],
     'format': ["SDP","DP","RD","AD","FREQ","PVAL","ABQ","GT","GQ"]
+  }
+}
+
+"vardict-indel" : {
+  "cols": {
+    'other': ["QUAL"]
+    'info': ["TYPE","DP","VD","AF","QSTD","MQ","SN","HIAF","ADJAF","NM","SVTYPE","SVLEN","DUPRATE"],
+    'format': ["GT"]
   }
 }
 
