--- a/envs/default.yml
+++ b/envs/default.yml
@@ -16,9 +16,7 @@ dependencies:
   - manta
   - pindel
   - coreutils>=8.31
+  - gawk
   - strelka
   - vardict-java
   - bedtools
-  # # this won't work until https://github.com/Illumina/hap.py/pull/82 is merged
-  # # in because hap.py is incompatible with the newest version of conda:
-  - hap.py
