use newest bcftools in conda env to circumvent issues with openssl versions

--- a/env.yml
+++ b/env.yml
@@ -11,7 +11,7 @@ dependencies:
   - gatk4>=4.1.1.0
   - varscan
   - delly
-  # - bcftools
+  - bcftools=1.9=ha228f0b_4
   - vcftools
   - manta
   - pindel
