--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@
 # and options for the predict pipeline. Anybody wishing to use
 # the provided snakemake pipeline should first fill out this file with paths to
 # their own data, as the Snakefile requires it.
+# Note: this file is written in the YAML syntax (https://learnxinyminutes.com/docs/yaml/)
 
 
 # what should our classifier predict?
@@ -25,6 +26,12 @@ label: "."
 #   3) na - Default values for every column
 #      You must specify an NA value for every column that you want to use in the classifier
 #      Specify a regex expression to match some column names as the key and a replacement for NA values in those columns as the value
+#   4) filter - (optional) A list of filtering expressions for filtering the data before training or testing
+#      A filtering expression consists of the following concatenated together:
+#          - the name of the column in the table upon which to filter
+#          - one of any of awk's comparison operators (ex: >, <, ==)
+#          - a value to filter on
+#      The order of the filtering expressions must match the order of the cols in the TSV.
 data:
   SRR891269:
     path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891269.tsv.gz
@@ -41,10 +48,13 @@ data:
       '^illumina-manta~(QUAL|SVLEN|HOMLEN|BND_DEPTH|MATE_BND_DEPTH|GQ)$': 0
       '^illumina-strelka~(QUAL|REFREP|IDREP|MQ|GQX|DP|DPF|MIN_DP|DPI|SB)$': 0
       '^breakca~.*$': 0
+    filter: &filter
+      ['gatk-indel~DP>10']
   SRR891271:
     path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891271.tsv.gz
     truth: *truth # use the same truth column names as the SRR891269 data
     na: *na # use the same na values as the SRR891269 data
+    filter: *filter
 
 # The unique id of the training set to be used for training the classifier
 train: SRR891269
@@ -52,6 +62,9 @@ train: SRR891269
 # A list of samples for which to make predictions, identified by their unique sample id
 # You may optionally specify a truth set for each sample if you want it to serve as test data (see "data" above)
 predict: [SRR891271]
+
+# Which chromosomes should we create models for?
+chroms: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', 'GL000192.1', 'GL000195.1', 'GL000199.1', 'GL000205.1', 'GL000208.1', 'GL000212.1', 'GL000216.1', 'GL000219.1', 'GL000220.1', 'GL000224.1', 'GL000225.1', 'GL000226.1', 'GL000228.1', 'GL000235.1', 'GL000241.1', 'NC_007605', 'X', 'Y']
 
 # Whether your data contains pseudo-numerical values
 # ex: scientific notation or numbers followed by a percent sign
