--- a/env.yml
+++ b/env.yml
@@ -23,3 +23,5 @@ dependencies:
   - bioconductor-genomicalignments>=1.10.0
   - bioconductor-variantannotation>=1.20.2
   - r-randomforest>=4.6_14
+  - coreutils>=8.31
+  - gawk
