--- a/config.yaml
+++ b/config.yaml
@@ -33,8 +33,8 @@ label: "."
 #          - a value to filter on
 #      The order of the filtering expressions must match the order of the cols in the TSV.
 data:
-  SRR891269:
-    path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891269.tsv.gz
+  SRR891269_odd:
+    path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891269_odd-chrom.tsv.gz
     truth: &truth
       pg-indel
     na: &na
@@ -42,29 +42,33 @@ data:
       '^varscan-indel~(ADP|GQ|SDP|DP|RD|AD|RBQ|ABQ|RDF|RDR|ADF|ADR)$': 0
       '^varscan-indel~PVAL$': '1.01E0'
       '^vardict-indel~(QUAL|DP|VD|AF|QSTD|MQ|SN|HIAF|ADJAF|NM|SVLEN|DUPRATE)$': 0
-      '^(vardict-indel|pindel|illumina-manta)~(SV)?TYPE$': 'NC'
+      # '^(vardict-indel|pindel|illumina-manta)~(SV)?TYPE$': 'NC'
       '^delly~(RC|GQ)$': 0
       '^pindel~(HOMLEN|SVLEN|PL|RD)$': 0
       '^illumina-manta~(QUAL|SVLEN|HOMLEN|BND_DEPTH|MATE_BND_DEPTH|GQ)$': 0
       '^illumina-strelka~(QUAL|REFREP|IDREP|MQ|GQX|DP|DPF|MIN_DP|DPI|SB)$': 0
       '^breakca~.*$': 0
-    filter: &filter
-      ['gatk-indel~DP>10']
-  SRR891271:
-    path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891271.tsv.gz
+    # filter: &filter
+    #   ['gatk-indel~DP>10']
+  SRR891269_even:
+    path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891269_even-chrom.tsv.gz
     truth: *truth # use the same truth column names as the SRR891269 data
     na: *na # use the same na values as the SRR891269 data
-    filter: *filter
+  # SRR891271:
+  #   path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891271.tsv.gz
+  #   truth: *truth # use the same truth column names as the SRR891269 data
+  #   na: *na # use the same na values as the SRR891269 data
+  #   # filter: *filter
 
 # The unique id of the training set to be used for training the classifier
-train: SRR891269
+train: SRR891269_odd
 
 # A list of samples for which to make predictions, identified by their unique sample id
 # You may optionally specify a truth set for each sample if you want it to serve as test data (see "data" above)
-predict: [SRR891271]
+predict: [SRR891269_even]
 
-# Which chromosomes should we create models for?
-chroms: ['1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13', '14', '15', '16', '17', '18', '19', '20', '21', '22', 'GL000192.1', 'GL000195.1', 'GL000199.1', 'GL000205.1', 'GL000208.1', 'GL000212.1', 'GL000216.1', 'GL000219.1', 'GL000220.1', 'GL000224.1', 'GL000225.1', 'GL000226.1', 'GL000228.1', 'GL000235.1', 'GL000241.1', 'NC_007605', 'X', 'Y']
+# Whether to perform undersampling on the training data to obtain balanced data
+balance: false
 
 # Whether your data contains pseudo-numerical values
 # ex: scientific notation or numbers followed by a percent sign
