use ranger and allow balanced model training

--- a/env.yml
+++ b/env.yml
@@ -23,5 +23,4 @@ dependencies:
   - bioconductor-genomicalignments>=1.10.0
   - bioconductor-variantannotation>=1.20.2
   - r-randomforest>=4.6_14
-  - coreutils>=8.31
-  - gawk
+  - r-ranger>=0.11.2
