--- a/env.yml
+++ b/env.yml
@@ -20,6 +20,7 @@ dependencies:
   - strelka
   - vardict-java
   - bedtools
+  - tabix
   - r-data.table>=1.10.0
   - r-plyr=1.8.4
   - r-dplyr>=0.7.4
