--- a/env.yml
+++ b/env.yml
@@ -24,3 +24,5 @@ dependencies:
   - bioconductor-variantannotation>=1.20.2
   - r-randomforest>=4.6_14
   - r-ranger>=0.11.2
+  - coreutils>=8.31
+  - gawk
