--- a/config.yaml
+++ b/config.yaml
@@ -48,13 +48,13 @@ data:
       # '^illumina-manta~(QUAL|SVLEN|HOMLEN|BND_DEPTH|MATE_BND_DEPTH|GQ)$': 0
       # '^illumina-strelka~(QUAL|REFREP|IDREP|MQ|GQX|DP|DPF|MIN_DP|DPI|SB)$': 0
       # '^breakca~.*$': 0
-    # filter: &filter
-    #   - 'gatk-indel~DP>0'
+    filter: &filter
+      - 'gatk-indel~DP>0'
   SRR891269_even:
     path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_snp/SRR891269_even-chrom.tsv.gz
     truth: *truth # use the same truth column names as the SRR891269 data
     na: *na # use the same na values as the SRR891269 data
-    # filter: *filter
+    filter: *filter
   # SRR891271:
   #   path: /iblm/netapp/home/amassarat/breakCA/merge_callers/out/merged_indel/SRR891271.tsv.gz
   #   truth: *truth # use the same truth column names as the SRR891269 data
@@ -74,6 +74,19 @@ balance: false
 # Whether your data contains pseudo-numerical values
 # ex: scientific notation or numbers followed by a percent sign
 norm_numerics: true
+
+# If you'd like the pipeline to create a plot of precision-recall curves, specify
+# the column names to use for thresholding here. Otherwise, comment out these lines.
+# Only single point precision-recall calculation will be performed for
+# column names that don't have a value
+# Prefix the column name with a * if it should be sorted in reverse order
+prcols:
+  'gatk-snp': QD
+  '*varscan-snp': PVAL
+  'vardict-snp': QUAL
+  # 'pindel':
+  # 'illumina-manta': QUAL
+  # 'illumina-strelka': QUAL
 
 # The path to the directory in which to place all of the output files
 # defined relative to whatever directory you execute the snakemake command in
