--- a/config.yaml
+++ b/config.yaml
@@ -8,40 +8,61 @@
 # Each row in the sample file should represent a different sample.
 # The sample file should have 3 columns (each separated by a single tab):
 #       <unique_sample_name> <fastq1_path> <fastq2_path>
-"sample_file" : "/iblm/netapp/home/amassarat/breakCA/merge_callers/samples.tsv"
+sample_file: /iblm/netapp/home/amassarat/breakCA/merge_callers/samples.tsv
 
 # which samples should we execute the pipeline on?
-# comment out this line if you want to run all samples
-"SAMP_NAMES" : ["SRR891269","SRR891271"]
+# Comment out this line if you want to run all samples in the sample file
+SAMP_NAMES: [SRR891269,SRR891271]
 
 # The path to a reference genome for BWA
-"genome" : "/iblm/netapp/data1/external/GRC37/combined/bwa_index_assembly19/Homo_sapiens_assembly19.fasta"
+genome: /iblm/netapp/data1/external/GRC37/combined/bwa_index_assembly19/Homo_sapiens_assembly19.fasta
 
-# directory in which to output all of the output files
-# defined relative to whatever directory you execute the snakemake command in
-"output_dir" : "/iblm/netapp/home/amassarat/breakCA/merge_callers/out"
+# Directory in which to output all of the output files
+# Defined relative to whatever directory you execute the snakemake command in
+out: /iblm/netapp/home/amassarat/breakCA/merge_callers/out
 
-# parameters to use when calling bcftools to filter the VCF output of every caller script
-# see http://www.htslib.org/doc/bcftools.html#view for all possible options
-# use an empty string or comment out this line if you'd like your VCFs unfiltered
-# "bcftools_params" : "-M 2"
+# What are the maximum number of threads to use for the entire pipeline?
+num_threads: 8
 
-# whether to "normalize" the VCF output of every caller script
-# normalization usually involves left-alignment and trimming of variants
-# see https://genome.sph.umich.edu/wiki/Variant_Normalization for more info
-# in our pipeline, the normalization step also reduces counts of variants that appear at the same position to 1
-"normalize" : true
+# Which callers do you want to run to find SNVs?
+# If you don't want to run the snp pipeline, set this to a falsey value or comment out the line
+snp_callers: [gatk-snp, varscan-snp, vardict-snp, pg-snp]
 
-# which callers do you want to run to find SNVs?
-# if you don't want to run the snp pipeline, set this to a falsey value or comment out the line
-"snp_callers" : ["gatk-snp", "varscan-snp", "vardict-snp", "pg-snp"]
+# Which callers do you want to run to find indels?
+# If you don't want to run the indel pipeline, set this to a falsey value or comment out the line
+indel_callers: [gatk-indel, varscan-indel, vardict-indel, delly, pindel, illumina-manta, illumina-strelka, pg-indel, breakca]
 
-# which callers do you want to run to find indels?
-# if you don't want to run the indel pipeline, set this to a falsey value or comment out the line
-"indel_callers" : ["gatk-indel", "varscan-indel", "vardict-indel", "delly", "pindel", "illumina-manta", "illumina-strelka", "pg-indel", "breakca"]
+# Parameters to use when calling bcftools to filter the VCF output of every caller script
+# See http://www.htslib.org/doc/bcftools.html#view for all possible options
+# Use an empty string or comment out this line if you'd like your VCFs unfiltered
+# bcftools_params: "-M 2"
 
-# what are the maximum number of threads to use for the entire pipeline?
-"num_threads" : 8
+# Whether to "normalize" the VCF output of every caller script
+# This option is recommended if you plan to feed the data to a random forest
+# Normalization usually involves left-alignment and trimming of variants
+# See https://genome.sph.umich.edu/wiki/Variant_Normalization for more info
+# In our pipeline, the normalization step also reduces counts of variants that appear at the same position to 1
+normalize: true
+
+# Whether to normalize weird numerical columns before outputting the final TSV
+# This option is recommended if you plan to feed the data to a random forest
+# ex: scientific notation or numbers followed by a percent sign
+norm_numerics: true
+
+# Whether to replace NA values in the dataset before outputting the final TSV
+# This option is recommended if you plan to feed the data to a random forest
+# Unless otherwise specified in the Caller Specific Parameters below, NA values will be replaced with 0
+fillna: true
+
+# A list of filtering expressions for filtering the sites before outputting the final TSV
+# A filtering expression consists of the following concatenated together:
+#   - the name of the column in the table upon which to filter
+#   - one of awk's comparison operators (the following are currently supported: >, <, ==)
+#   - a value to filter on
+# Comment out these lines to disable filtering
+# Note that your filters may have unattended consequences if 'fillna' (above) is not set to true
+snp_filter: ['gatk-snp~DP>0']
+indel_filter: ['gatk-indel~DP>0']
 
 
 # CALLER SPECIFIC PARAMETERS
@@ -52,108 +73,81 @@
 #   3) whether your caller outputs a VCF (assumed if not specified) or a TSV
 # key should be <caller_name> and value can be a dictionary where "cols" are the columns, "params" is a string or list of parameters, and "ext" is either 'vcf' or 'tsv'
 # "cols" should be a dictionary of lists containing each category of column in the VCF (where categories can be 'info', 'format', and 'other' for all others)
+gatk-snp:
+  cols:
+    other: [QUAL]
+    info: [QD,FS,MQ,AC,ExcessHet]
+    format: [DP,GQ]
 
-"gatk-snp" : {
-  "cols": {
-    'other': ["QUAL"],
-    'info': ["QD","FS","MQ","AC","ExcessHet"],
-    'format': ["DP","GQ"]
-  }
-}
+varscan-snp:
+  cols:
+    info: [ADP]
+    format: [SDP,DP,RD,AD,FREQ,PVAL,ABQ,GQ,RBQ,RDF,RDR,ADF,ADR]
 
-"varscan-snp" : {
-  "cols": {
-    'info': ["ADP"],
-    'format': ["SDP","DP","RD","AD","FREQ","PVAL","ABQ","GQ","RBQ","RDF","RDR","ADF","ADR"]
-  }
-}
+vardict-snp:
+  cols:
+    other: [QUAL]
+    info: [TYPE,DP,VD,AF,QSTD,MQ,SN,HIAF,ADJAF,NM,SVTYPE,SVLEN,DUPRATE]
 
-"vardict-snp" : {
-  "cols": {
-    'other': ["QUAL"],
-    'info': ["TYPE","DP","VD","AF","QSTD","MQ","SN","HIAF","ADJAF","NM","SVTYPE","SVLEN","DUPRATE"]
-  }
-}
-
-"pg-snp" : {
+pg-snp:
   # path to a bgzip, indexed VCF containing variants called in the platinum genomes project
-  "params": "/iblm/netapp/data1/external/PlatinumGenomes/2017-1.0/hg19/hybrid/hg19.hybrid.no_chr.vcf.gz"
-}
+  params: /iblm/netapp/data1/external/PlatinumGenomes/2017-1.0/hg19/hybrid/hg19.hybrid.no_chr.vcf.gz
 
-"gatk-indel" : {
-  "cols": {
-    'info': ["QD","FS","MQ","AC","ExcessHet"],
-    'format': ["DP","GQ"]
-  }
-}
+gatk-indel:
+  cols:
+    info: [QD,FS,MQ,AC,ExcessHet]
+    format: [DP,GQ]
 
-"varscan-indel" : {
-  "cols": {
-    'info': ["ADP"],
-    'format': ["SDP","DP","RD","AD","FREQ","PVAL","ABQ","GQ","RBQ","RDF","RDR","ADF","ADR"]
-  }
-}
+varscan-indel:
+  cols:
+    info: [ADP]
+    format: [SDP,DP,RD,AD,FREQ,PVAL,ABQ,GQ,RBQ,RDF,RDR,ADF,ADR]
 
-"vardict-indel" : {
-  "cols": {
-    'other': ["QUAL"],
-    'info': ["TYPE","DP","VD","AF","QSTD","MQ","SN","HIAF","ADJAF","NM","SVTYPE","SVLEN","DUPRATE"]
-  }
-}
+vardict-indel:
+  cols:
+    other: [QUAL]
+    info: [TYPE,DP,VD,AF,QSTD,MQ,SN,HIAF,ADJAF,NM,SVTYPE,SVLEN,DUPRATE]
 
-"delly" : {
-  "cols": {'format': ["RC","GQ"]}
-}
+delly:
+  cols:format: [RC,GQ]
 
-"pindel" : {
-  "cols": {
-    'info': ["HOMLEN","SVLEN","SVTYPE"],
-    'format': ["PL","RD"]
-  }
-}
+pindel:
+  cols:
+    info: [HOMLEN,SVLEN,SVTYPE]
+    format: [PL,RD]
 
-"illumina-manta" : {
-  "cols": {
-    'other': ["QUAL"],
-    'info': ["SVTYPE","SVLEN","HOMLEN","BND_DEPTH","MATE_BND_DEPTH"],
-    'format': ["GQ"]
-  }
-}
+illumina-manta:
+  cols:
+    other: [QUAL]
+    info: [SVTYPE,SVLEN,HOMLEN,BND_DEPTH,MATE_BND_DEPTH]
+    format: [GQ]
 
-"illumina-strelka" : {
-  "cols": {
-    'other': ["QUAL"],
-    'info': ["REFREP","IDREP","MQ"],
-    'format': ["GQX","DP","DPF","MIN_DP","DPI","SB"]
-  },
+illumina-strelka:
+  cols:
+    other: [QUAL]
+    info: [REFREP,IDREP,MQ]
+    format: [GQX,DP,DPF,MIN_DP,DPI,SB]
   # 1) path to strelka config file
   # 2) path to the directory in which strelka is stored or "" if strelka is installed in your current conda env (or if using --use-conda)
-  "params": ["/iblm/netapp/home/amassarat/breakCA/merge_callers/scripts/configureStrelkaGermlineWorkflow.py.ini", ""]
-}
+  params: [/iblm/netapp/home/amassarat/breakCA/merge_callers/scripts/configureStrelkaGermlineWorkflow.py.ini, ""]
 
-"breakca" : {
+breakca:
   # specify that breakca creates a tsv instead of a vcf
-  "ext": 'tsv',
+  ext: tsv
   # 1) the (relative) path to the root of the breakCA git repository
   # 2) path to the directory in which the Rscript executable is held or "" if R is installed in your current conda env (or if using --use-conda)
-  "params": ["breakCA", ""]
-}
+  params: [breakCA, ""]
 
-"pg-indel" : {
+pg-indel:
   # path to a bgzip, indexed VCF containing variants called in the platinum genomes project
-  "params": "/iblm/netapp/data1/external/PlatinumGenomes/2017-1.0/hg19/hybrid/hg19.hybrid.no_chr.vcf.gz"
-}
+  params: /iblm/netapp/data1/external/PlatinumGenomes/2017-1.0/hg19/hybrid/hg19.hybrid.no_chr.vcf.gz
 
-
-# Custom parameters can also be passed to special scripts that perform pre-caller steps
-
-"illumina" : {
+# Custom parameters can also be passed to special scripts that perform pre-caller steps:
+illumina:
   # 1) path to manta config file
   # 2) path to the directory in which manta is stored or "" if manta is installed in your current conda env (or if using --use-conda)
-  "params": ["/iblm/netapp/home/amassarat/breakCA/merge_callers/scripts/configManta.py.ini", ""]
-}
+  params: [/iblm/netapp/home/amassarat/breakCA/merge_callers/scripts/configManta.py.ini, ""]
 
-"pg" : {
+pg:
   # path to a bgzip, indexed VCF containing variants called in the platinum genomes project
-  "params": "/iblm/netapp/data1/external/PlatinumGenomes/2017-1.0/hg19/hybrid/hg19.hybrid.no_chr.vcf.gz"
-}
+  params: /iblm/netapp/data1/external/PlatinumGenomes/2017-1.0/hg19/hybrid/hg19.hybrid.no_chr.vcf.gz
